--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -16,7 +16,7 @@ http {
         server_tokens off;
 
         location / {
-            root /updater/static;
+            root /knitter/static;
             index libraries.html;
         }
 
