--- a/updater/Dockerfile
+++ b/updater/Dockerfile
@@ -1,19 +1,11 @@
-FROM ubuntu:22.04
-
-# installation of r-base asks for location
-ENV TZ=America/New_York
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-RUN apt-get update && apt-get install -y libmysqlclient-dev r-base pandoc python3.10 python3-pip
+FROM python:3.10
 
 WORKDIR /updater
 
-COPY . .
+COPY requirements.txt .
 
 RUN pip3 install -r requirements.txt
 
-RUN R -e "install.packages('renv', repos = c(CRAN = 'https://cloud.r-project.org'))"
+COPY . .
 
-RUN R -e "renv::restore()"
-
-CMD ["sh", "update.sh"]
+CMD ["python3", "record_occupancy.py"]
