add busyness forecasting
create a script that trains and generates a timeseries model, update all datetimes to be utc, update API with routes to get and fetch predictions, and update DB schema

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,18 @@ services:
       api:
         condition: service_started
 
+  model:
+    build:
+      context: predictor/model
+    environment:
+      - API_HOST=api
+      - API_PORT=3000
+    networks:
+      - front-net
+    depends_on:
+      api:
+        condition: service_started
+
 volumes:
   db-data:
   libraries-data:
